2002-03-09  Richard Hestilow  <hestilow@ximian.com>

	* preview-file-selection.[ch]: Added.

	* Makefile.am: Compile preview-file-selection.c.
	
	* preferences.c (bg_preferences_init): Initialize adjust_opacity
	to FALSE.

2002-03-03  Alexander Larsson  <alla@lysator.liu.se>

	* preferences.c (bg_preferences_save):
	Save wallpaper-enabled too.

2002-02-22  Richard Hestilow  <hestilow@ximian.com>
	
	* preferences.[ch]: Add function bg_preferences_save.
	
2002-02-17  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (need_root_pixmap_p): We don't need a root pixmap if
	neither a wallpaper nor a gradient is enabled
	(render_to_screen): Use set_back_pixmap/set_background when just
	setting a color with a root applier
	(need_root_pixmap_p): If the last preferences structure had
	neither gradient nor wallpaper enabled, we need a new root pixmap
	(need_wallpaper_load_p): We need to reload the wallpaper pixbuf if
	it is enabled and not loaded
	(cleanup_cb): Free bg_applier->p->pixbuf too
	(bg_applier_apply_prefs): Only add the timeout for cleanup if we
	are in a root renderer; we don't need it for preview

2002-02-12  Lauris Kaplinski  <lauris@ximian.com>

	* applier.c (draw_disabled_message): Use g_object_unref for GdkGC
	(render_wallpaper): Use gdk_drawable_get_size
	(render_to_screen): Use gdk_get_default_root_window
	(wallpaper_full_cover_p): Ditto

	* preferences.c (read_color_from_string): Use gdk_rgb_find_color

	* applier.c (bg_applier_get_preview_widget): Use gnome_program_locate_file,
	replace GDK_ROOT_PARENT with gdk_get_default_root_window, deprecated
	gdk_window_* methods with gdk_drawable_* ones
	(bg_applier_get_preview_widget): Removed gtk_widget_push_visual,
	gtk_widget_pop_visual, use gtk_image instead of gtk_pixmap

2002-02-07  Richard Hestilow  <hestilow@ximian.com>

	* applier.c (BGApplierPrivate): Add "timeout" field.
	(bg_apply_cleanup_cb): Added.
	(bg_applier_apply_prefs): Add/reset timeout for cleanup function
	if we load a pixbuf.
